chore: add DX/Tooling\n\n- package.json engines (node >=20.19.0)\n- expand .gitignore for common OS/editor artifacts\n- add GitHub Actions workflow to validate/grade example spec\n- keep existing .dockerignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 /node_modules
 /dist
 /.history
+/.env
+/.env.*
+/.DS_Store
+Thumbs.db
+npm-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+*.log
+/.cache
+/.tmp
+.eslintcache
+.vscode/
+.idea/
