--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=20.19.0"
+  },
   "scripts": {
     "lint": "spectral lint --ruleset .spectral.yaml --fail-severity error",
     "bundle": "node scripts/bundle.mjs",
