chore(UX): align npx tool versions to pins\n\n- Use Redocly CLI 2.7.0 across npx scripts\n- Use Spectral CLI 6.15.0 in grade:npx\n\nchore(UX): standardize rule messages to English\n\n- Rewrite validateResponseHasExample + maxGteMin messages in English\n- Update security.yaml numeric rules and comments to English\n- Fix core path rule description wording\n- Remove duplicate property-camel-case severity from .spectral.yaml

--- a/.spectral.yaml
+++ b/.spectral.yaml
@@ -36,7 +36,7 @@ rules:
   # Paths and parameters
   path-declarations-must-exist: error
   path-keys-no-trailing-slash: error
-  property-camel-case: warn
+  # property-camel-case severity is defined in rules/core.yaml; remove duplicate here
 
   # Schemas and types
   array-items: error
