--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,6 +33,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Read package version
+        id: pkg
+        run: echo "version=$(node -p \"require('./package.json').version\")" >> $GITHUB_OUTPUT
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
@@ -56,6 +60,7 @@ jobs:
             type=ref,event=branch
             type=raw,value=latest,enable={{is_default_branch}}
             type=raw,value=${{ github.event.inputs.tag }},enable=${{ github.event.inputs.tag != '' }}
+            type=raw,value=v${{ steps.pkg.outputs.version }},enable=true
 
       - name: Build and (optionally) push
         uses: docker/build-push-action@v5
@@ -73,4 +78,3 @@ jobs:
           echo "Pushed: ${{ github.event_name == 'release' || startsWith(github.ref, 'refs/tags/') || github.event.inputs.push == 'true' || github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}" >> $GITHUB_STEP_SUMMARY
           echo "Tags:" >> $GITHUB_STEP_SUMMARY
           echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
-
