--- a/.github/workflows/docker-smoke-test.yml
+++ b/.github/workflows/docker-smoke-test.yml
@@ -19,10 +19,17 @@ jobs:
       packages: read
     env:
       REGISTRY: ghcr.io
-      IMAGE: ghcr.io/${{ github.repository }}:${{ inputs.tag }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Resolve image tag (input or latest)
+        run: |
+          if [ -n "${{ github.event.inputs.tag }}" ]; then
+            echo "IMAGE=ghcr.io/${{ github.repository }}:${{ github.event.inputs.tag }}" >> $GITHUB_ENV
+          else
+            echo "IMAGE=ghcr.io/${{ github.repository }}:latest" >> $GITHUB_ENV
+          fi
 
       - name: Read package version
         id: ver
