--- a/.github/workflows/docker-smoke-test.yml
+++ b/.github/workflows/docker-smoke-test.yml
@@ -35,6 +35,20 @@ jobs:
         run: |
           echo "IMAGE_VERSION=ghcr.io/${{ github.repository }}:v$(jq -r .version package.json)" >> $GITHUB_ENV
 
+      - name: Check version tag availability (retry)
+        run: |
+          for i in {1..10}; do
+            if docker manifest inspect "$IMAGE_VERSION" >/dev/null 2>&1; then
+              echo "HAS_VERSION=true" >> $GITHUB_ENV
+              echo "Found version tag: $IMAGE_VERSION"
+              exit 0
+            fi
+            echo "Waiting for $IMAGE_VERSION to become available... ($i/10)"
+            sleep 12
+          done
+          echo "HAS_VERSION=false" >> $GITHUB_ENV
+          echo "Version tag not available; will skip version-tag smoke steps."
+
       - name: Show image references
         run: |
           echo "Image (resolved): $IMAGE"
@@ -84,9 +98,11 @@ jobs:
             dist/bundled-*
 
       - name: Pull image (version tag)
+        if: env.HAS_VERSION == 'true'
         run: docker pull "$IMAGE_VERSION"
 
       - name: Validate example using container (version tag)
+        if: env.HAS_VERSION == 'true'
         run: |
           mkdir -p dist
           docker run --rm \
@@ -96,6 +112,7 @@ jobs:
             npm run validate -- /spec/openapi.yaml
 
       - name: Grade example using container (version tag)
+        if: env.HAS_VERSION == 'true'
         run: |
           docker run --rm \
             -e SCHEMA_LINT=1 \
@@ -105,13 +122,14 @@ jobs:
             npm run grade -- /spec/openapi.yaml
 
       - name: Check grade report exists (version tag)
+        if: env.HAS_VERSION == 'true'
         run: |
           test -f dist/grade-report.json
           echo "Grade report present (version tag)."
           head -n 50 dist/grade-report.json || true
 
       - name: Upload smoke artifacts (version tag)
-        if: always()
+        if: always() && env.HAS_VERSION == 'true'
         uses: actions/upload-artifact@v4
         with:
           name: docker-smoke-out-version
