feat(swagger): add Swagger UI preview command\n\n- scripts/swagger.mjs bundles spec and serves Swagger UI (CDN)\n- npm run swagger and Makefile target\n- README: document usage

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bundle:npx": "node scripts/bundle-npx.mjs",
     "preview": "node scripts/preview.mjs",
     "preview:npx": "node scripts/preview-npx.mjs",
+    "swagger": "node scripts/swagger.mjs",
     "validate": "node scripts/validate.mjs",
     "validate:npx": "node scripts/validate-npx.mjs",
     "grade": "node scripts/grade.mjs",
