--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -98,3 +98,5 @@ jobs:
           echo "Pushed: ${{ github.event_name == 'release' || startsWith(github.ref, 'refs/tags/') || github.event.inputs.push == 'true' || github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}" >> $GITHUB_STEP_SUMMARY
           echo "Tags:" >> $GITHUB_STEP_SUMMARY
           echo "${{ steps.meta.outputs.tags }}" >> $GITHUB_STEP_SUMMARY
+          echo "\nPull with version tag (recommended):" >> $GITHUB_STEP_SUMMARY
+          echo "docker pull ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:v${{ steps.pkg.outputs.version }}" >> $GITHUB_STEP_SUMMARY
