chore(npm): scope package as @zoomiit/openapi-anyenv-suite and update README badges/install commands

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openapi-anyenv-suite",
+  "name": "@zoomiit/openapi-anyenv-suite",
   "version": "1.2.0",
   "private": false,
   "type": "module",
