docs(npm): add trimmed README for npm package and use it in publish workflow

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Install
         run: npm ci
 
+      - name: Use npm-specific README
+        run: cp docs/README.npm.md README.md
+
       - name: Publish
         run: npm publish --access public
         env:
