--- a/.github/workflows/auto-version.yml
+++ b/.github/workflows/auto-version.yml
@@ -83,8 +83,21 @@ jobs:
             fi
           done
 
+          # 2b) Update version references in docs (README samples with GHCR tag)
+          # Replace occurrences like ":v1.2.0" with the newly selected version
+          if [ -f README.md ]; then
+            sed -E -i "s|(openapi-anyenv-suite:)(v[0-9]+\.[0-9]+\.[0-9]+)|\1v$VERSION|g" README.md || true
+            sed -E -i "s|Current: `v[0-9]+\.[0-9]+\.[0-9]+`|Current: `v$VERSION`|g" README.md || true
+          fi
+          if [ -f docs/README.es.md ]; then
+            sed -E -i "s|(openapi-anyenv-suite:)(v[0-9]+\.[0-9]+\.[0-9]+)|\1v$VERSION|g" docs/README.es.md || true
+          fi
+
+          # 2c) Ensure package-lock.json reflects the new version
+          npm install --package-lock-only --no-audit --fund=false || true
+
           # 3) Commit, tag and push
-          git add package.json package-lock.json 2>/dev/null || true
+          git add package.json package-lock.json README.md docs/README.es.md 2>/dev/null || true
           git commit -m "chore(release): v$VERSION"
           git tag -a "v$VERSION" -m "chore(release): v$VERSION"
           git push
