chore(deps): remove unused 'yaml' runtime dependency (grade now parses JSON bundle)

--- a/package.json
+++ b/package.json
@@ -59,7 +59,6 @@
   },
   "dependencies": {
     "@redocly/cli": "2.7.0",
-    "@stoplight/spectral-cli": "6.15.0",
-    "yaml": "^2.6.0"
+    "@stoplight/spectral-cli": "6.15.0"
   }
 }
