fix(runtime): add 'yaml' dependency back (required by Redoc/Redocly); resolves 'Cannot find module yaml' during bundle/preview

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "dependencies": {
     "@redocly/cli": "2.7.0",
-    "@stoplight/spectral-cli": "6.15.0"
+    "@stoplight/spectral-cli": "6.15.0",
+    "yaml": "^2.6.0"
   }
 }
