--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -40,8 +40,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          registry-url: 'https://registry.npmjs.org'
-
+          
+      - name: Sync lockfile (when out of date)
+        if: ${{ steps.elig.outputs.publish == 'true' }}
+        run: npm install --package-lock-only --no-audit --fund=false
       - name: Install
         if: ${{ steps.elig.outputs.publish == 'true' }}
         run: npm ci
@@ -70,3 +72,4 @@ jobs:
           else
             echo "Publish verified successfully." >> $GITHUB_STEP_SUMMARY
           fi
+
