--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -40,6 +40,16 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
+          registry-url: 'https://registry.npmjs.org'
+          scope: '@zoomiit'
+          always-auth: true
+
+      - name: Configure npm auth
+        if: ${{ steps.elig.outputs.publish == 'true' }}
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
           
       - name: Sync lockfile (when out of date)
         if: ${{ steps.elig.outputs.publish == 'true' }}
