--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "grade:npx": "node scripts/grade-npx.mjs",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "doctor": "node -e \"console.log('Node', process.version)\" && spectral --version && redocly --version",
-    "prepare": "husky"
+    "prepare": "husky install"
   },
   "bin": {
     "openapi-validate": "scripts/validate.mjs",
@@ -62,11 +62,11 @@
   "dependencies": {
     "@redocly/cli": "2.7.0",
     "@stoplight/spectral-cli": "6.15.0",
+    "husky": "^9.1.7",
     "yaml": "^2.6.0"
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
-    "husky": "^9.1.7",
     "jest": "^30.2.0"
   }
 }
