--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "validate:npx": "node scripts/validate-npx.mjs",
     "grade": "node scripts/grade.mjs",
     "grade:npx": "node scripts/grade-npx.mjs",
+    "report": "node scripts/grade-report.mjs",
+    "report:npx": "node scripts/grade-report-npx.mjs",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "doctor": "node -e \"console.log('Node', process.version)\" && spectral --version && redocly --version"
   },
@@ -46,7 +48,8 @@
     "openapi-grade": "scripts/grade.mjs",
     "openapi-bundle": "scripts/bundle.mjs",
     "openapi-preview": "scripts/preview.mjs",
-    "openapi-swagger": "scripts/swagger.mjs"
+    "openapi-swagger": "scripts/swagger.mjs",
+    "openapi-grade-report": "scripts/grade-report.mjs"
   },
   "files": [
     "scripts",
