chore(pkg): publish templates/ and assets/ (default logo)

--- a/package.json
+++ b/package.json
@@ -51,9 +51,11 @@
     "openapi-swagger": "scripts/swagger.mjs",
     "openapi-grade-report": "scripts/grade-report.mjs"
   },
-  "files": ["templates", 
+  "files": [
     "scripts",
     "rules",
+    "templates",
+    "assets",
     ".spectral.yaml",
     "README.md",
     "LICENSE"
@@ -71,4 +73,3 @@
     "jest": "^30.2.0"
   }
 }
-
