--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grade:npx": "node scripts/grade-npx.mjs",
     "report": "node scripts/grade-report.mjs",
     "report:npx": "node scripts/grade-report-npx.mjs",
+    "report:serve": "node scripts/serve.mjs --dir dist --port 8080",
     "test": "cross-env NODE_OPTIONS=--experimental-vm-modules jest",
     "doctor": "node -e \"console.log('Node', process.version)\" && spectral --version && redocly --version"
   },
