--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,12 +18,17 @@ jobs:
         with:
           node-version: '22'
 
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
+
       - name: Install deps
-        run: npm ci
+        run: pnpm install
 
       - name: Validate example spec
-        run: npm run validate -- example/openapi.yaml
+        run: pnpm run validate -- example/openapi.yaml
 
       - name: Grade example spec (with schema lint)
-        run: SCHEMA_LINT=1 npm run grade -- example/openapi.yaml
+        run: SCHEMA_LINT=1 pnpm run grade -- example/openapi.yaml
 
