--- a/.github/workflows/openapi-validate.yml
+++ b/.github/workflows/openapi-validate.yml
@@ -31,22 +31,26 @@ jobs:
           repository: ${{ inputs.tools_repo }}
           path: tools
 
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'npm'
-          cache-dependency-path: tools/package-lock.json
+
+      - name: Set up pnpm
+        uses: pnpm/action-setup@v3
+        with:
+          version: 8
 
       - name: Install tools
         working-directory: tools
-        run: npm ci
+        run: pnpm install
 
       - name: Validate
         working-directory: tools
         env:
           SCHEMA_LINT: ${{ inputs.schema_lint }}
-        run: npm run validate -- ../${{ inputs.spec_path }}
+        run: pnpm run validate -- ../${{ inputs.spec_path }}
 
       - name: Upload bundle
         if: always()
