ci(test): enable ESM for jest in Actions via NODE_OPTIONS

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,6 @@ jobs:
         run: pnpm install
 
       - name: Run tests
+        env:
+          NODE_OPTIONS: --experimental-vm-modules
         run: pnpm test
