--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
-    "jest": "^30.2.0"
+    "jest": "^30.2.0",
+    "@redocly/cli": "2.7.0",
+    "@stoplight/spectral-cli": "6.15.0"
   }
 }
