chore(ci): install CLIs as devDependencies and use pnpm install for tests

--- a/package.json
+++ b/package.json
@@ -66,8 +66,6 @@
   },
   "devDependencies": {
     "cross-env": "^10.1.0",
-    "jest": "^30.2.0",
-    "@redocly/cli": "2.7.0",
-    "@stoplight/spectral-cli": "6.15.0"
+    "jest": "^30.2.0"
   }
 }
