--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,11 +21,14 @@ jobs:
         uses: pnpm/action-setup@v3
         with:
           version: 8
+          
+      - name: Install CLI tools for tests
+        run: |
+          # Install the CLIs globally so they are available in PATH
+          npm install -g @redocly/cli@2.7.0 @stoplight/spectral-cli@6.15.0
 
       - name: Install dependencies
         run: pnpm install
-
-      # The CLIs are installed as devDependencies so pnpm install will provide them
 
       - name: Run tests
         env:
